Updates from ShareLaTeX

--- a/Project3/Project3.tex
+++ b/Project3/Project3.tex
@@ -14,41 +14,63 @@
 
 \author{Hans Erlend Bakken Glad, Torbjørn Lode Gjerberg, Christer Dreierstad, Stig-Nicolai Foyn}
 
-\email{ola.d.nordmann@astro.uio.no}
+\email{, ,stignicf@student.matnat.uio.no, chrisdre@student.matnat.uio.no}
 
-\altaffiltext{1}{Institute of Physics, University of
+\altaffiltext{1}{Institute of Theoretical Astrophysics, University of
   Oslo, P.O.\ Box 1029 Blindern, N-0315 Oslo, Norway}
 
 
 %\date{Received - / Accepted -}
 
 \begin{abstract}
-
+  State problem. Briefly describe method and data. Summarize main results.
 \end{abstract}
 \keywords{planetary movement --- cosmology: observations --- methods: velocity verlet, forward euler}
 
 \section{Introduction}
 \label{sec:introduction}
 
-
+Discuss background, physical importance and possibly some history of
+the problem that is being studied in this paper.
 
 
 \section{Method}
 \label{sec:method}
 
 
+Describe method. Define data model and likelihood. Outline how the
+likelihood was computed (grid or MCMC).
+
+Define the power law model in terms of $Q$ and $n$. 
+
 \section{Data}
 \label{sec:data}
 
+Summarize properties of data. Which data are used (experiment,
+frequencies etc.)? Pixel resolution ($N_{\textrm{side}}$),
+$\ell_{\textrm{max}}$ -- everything necessary to repeat the analysis
+for other researchers.
+
+Show a sky map of the smoothed data. Use the Healpix routine
+``smoothing'' to do this; it works just like anafast. Smooth with a
+$7^{\circ}$ beam, and plot with ``map2gif''. Show the RMS pattern as
+well. 
 
 \section{Results}
 \label{sec:results}
 
 
+Show the 2D likelihood contours. Summarize constraints on $Q$ and
+$n$. 
+
 
 \section{Conclusions}
 \label{sec:conclusions}
 
+Summarize results. Discuss their importance, referring to the
+discovery to the initial seeds for structure formation. Mention that
+these results are in good agreement with expectations from
+inflationary theory.
 
 
 
