Updates from ShareLaTeX

--- a/LaTeX/template/ms.tex
+++ b/LaTeX/template/ms.tex
@@ -46,7 +46,7 @@ The Euler method is a first-order method to approximate the solution to a differ
     x(t + \Delta t) = x(t) + v(t) \Delta t \\
     a(t + \Delta t) = f( ... ).
 \end{gather}
-In our case, $f$ is a function of position only. 
+In our case, $a = f(x)$
 
 
 \subsection{Object-orientation}
