--- a/Project3/report/Project3.tex
+++ b/Project3/report/Project3.tex
@@ -5,8 +5,8 @@
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{epsfig,floatflt}
-
-
+\usepackage{url}
+\setcitestyle{square}
 
 \begin{document}
 
@@ -14,65 +14,249 @@
 
 \author{Hans Erlend Bakken Glad, Torbjørn Lode Gjerberg, Christer Dreierstad, Stig-Nicolai Foyn}
 
-\email{, ,stignicf@student.matnat.uio.no, chrisdre@student.matnat.uio.no}
+\email{heglad@student.matnat.uio.o,  SKRIV EPOSTEN DIN HER TORBJØRN,stignicf@student.matnat.uio.no, chrisdre@student.matnat.uio.no}
 
-\altaffiltext{1}{Institute of Theoretical Astrophysics, University of
+\altaffiltext{1}{Institute of Physics, University of
   Oslo, P.O.\ Box 1029 Blindern, N-0315 Oslo, Norway}
-
 
 %\date{Received - / Accepted -}
 
 \begin{abstract}
-  State problem. Briefly describe method and data. Summarize main results.
+
 \end{abstract}
 \keywords{planetary movement --- cosmology: observations --- methods: velocity verlet, forward euler}
 
 \section{Introduction}
 \label{sec:introduction}
 
-Discuss background, physical importance and possibly some history of
-the problem that is being studied in this paper.
+Simulating the orbits of the planets in the Solar System is a suitable problem for making use of object-oriented code. While the two-body problem is straightforward to implement numerically, introducing multiple planets can quickly become tedious if the code is not written for this purpose. This is where object-orientation excels, as it is built upon writing code once and then running it several times for different cases. In practice, this is done by writing classes in C++ and using them to solve various problems.
 
+Our procedure for creating an object-oriented code starts with solving the motion of Earth around the Sun, but without implementing any classes first. This gives us an idea of which parts of our code is suited for object-orientation. The calculation of the orbits is performed with numerical integration, using the Euler method and the Velocity Verlet method. We will compare the stability of the two methods and how well they conserve physical quantities. After writing a proper object-oriented code, we will be able to extend our model to include all planets in the Solar System.
+%(Demonstrate usefulness of object-oriented code)
 
-\section{Method}
+\section{Theory and method}
 \label{sec:method}
 
+\subsection{Integration methods}
+The Euler method (or Forward Euler) is a first-order approximation to the solution of a differential equation. We require an analytical expression $f$ for the acceleration $a$, an initial velocity $v$ and position $x$. In the one-dimensional case and with a step length of $h$, the values at the time $t + h$ are then
+%
+\begin{gather*}
+    v_{t + h} = v_{t} + a_{t} h \\
+    x_{t + h} = x_{t} + v_{t} h \\
+    a_{t + h} = f(x_{t+1}) 
+\end{gather*}
+%
+or on discretized form where $i+1$ represents the next point in time:
+%
+\begin{gather*}
+    v(i + 1) = v(i) + a(i) h \\
+    x(i + 1) = x(i) + v(i) h \\
+    a(i + 1) = f(x(i+1))
+\end{gather*}
+%
+In our program, this procedure is repeated until $t$ reaches the desired simulation time. This method can easily be extended to 2 or 3 spatial dimensions.
 
-Describe method. Define data model and likelihood. Outline how the
-likelihood was computed (grid or MCMC).
+The problem with the Euler method is that it does not conserve the mechanical energy of the system, i. e. the sum of the kinetic and potential energy,
+%
+\begin{equation}
+E_{tot} = E_k + U,
+\end{equation}
+%
+is not constant over time. Because we are looking at a system with gravity as the only force, the total energy should be conserved because gravity is a conservative force. This issue may not be noticeable for the first few orbits, but this will eventually cause orbits to deviate significantly from their original shape.
 
-Define the power law model in terms of $Q$ and $n$. 
+A more suitable way of calculating planetary orbits is through using the Velocity Verlet method. This integration method is symmetric in time, which means that it should conserve the total energy of the system when $h \rightarrow 0$. We implement the Velocity Verlet method with
+%
+\begin{align*}
+    x(i + 1) & = x(i) + v(i) h + a(i) h^2 \\
+    a(i + 1) & = f(x(i+1)) \\
+    v(i + 1) & = v(i) + \frac{h}{2}\left(a(i+1) + a(i)\right),
+\end{align*}
+%
+and these values are calculated $n$ times with a given precision $h$.
 
-\section{Data}
-\label{sec:data}
+\subsection{Object-orientation}
 
-Summarize properties of data. Which data are used (experiment,
-frequencies etc.)? Pixel resolution ($N_{\textrm{side}}$),
-$\ell_{\textrm{max}}$ -- everything necessary to repeat the analysis
-for other researchers.
 
-Show a sky map of the smoothed data. Use the Healpix routine
-``smoothing'' to do this; it works just like anafast. Smooth with a
-$7^{\circ}$ beam, and plot with ``map2gif''. Show the RMS pattern as
-well. 
+\subsection{Scaling the equations governing the Solar System}
+We will consider a model of our Solar System where gravity is the only force present. By Newton's law of gravitation, two celestial bodies with mass $M_1$ and $M_2$ separated by a distance $r$ will both experience a force with magnitude
+%
+\begin{equation}\label{eq:gforce}
+    F_G = \frac{G M_1 M_2}{r^2},
+\end{equation}
+where $G = 6.67408 \times 10^{-11} \ \textrm{N} \ \textrm{kg}^{-2} \textrm{m}^2$. The acceleration experienced by body 1 is then
+%
+\begin{equation*}
+    a_1 = \frac{F_G}{M_1} = \frac{G M_2}{r^2},
+\end{equation*}
+%
+and similarly for body 2.
+
+If we consider a 'flat' Solar System with only two dimensions (naming the axes $x$ and $y$), the acceleration can be decomposed into
+%
+\begin{equation*}
+    a_x = \frac{G M_2}{r^2}\cdot\frac{\Delta x}{r}, \quad a_y = \frac{G M_2}{r^2}\cdot\frac{\Delta y}{r},
+\end{equation*}
+%
+where $\Delta_x$ and $\Delta_y$ are the differences in position coordinates $x$ and $y$ between the two bodies. This can easily be extended to include the third dimension (the 'height' of the Solar System) as well. 
+
+In order to make our values easier to work with, we will scale the equations accordingly. We define the Sun to have a mass $M_S = M_\odot = 2\times 10^{30}$ kg and express the other masses (i. e. planets, moons) as a fraction of $M_\odot$. Distance is measured in terms of astronomical units AU, where $1 \ \textrm{AU} = 1.496 \times 10^{11} \ \textrm{meters}$ and time is measured in years. This is appropriate for the scales we are looking at, since the Earth takes one year (surprise) to orbit the Sun once at an average distance of 1 AU. The gravitational constant can now be expressed as 
+%
+\begin{equation*}
+G = 4\pi^2 \ \frac{\textrm{AU}^3}{\textrm{yr}^{2}M} 
+\end{equation*}
+%
+where $M$ is the total mass in the system. From this we get the expression that will be used to calculate the acceleration $a$ induced by a body with mass $M$:
+%
+\begin{equation*}
+a = \frac{4\pi^2 M}{r^2}, \ \textrm{with} \ [a] = \frac{\textrm{AU}}{\textrm{yr}^2}.
+\end{equation*}
+
+
+\subsection{Our simplest model: Earth orbiting a stationary Sun}
+
+To get an idea on how to produce a realistic model of the Solar System, we will first look at a simple model with only the Earth and the Sun present. Earth's orbit is set to be perfectly circular, while in reality it is slightly elliptical. The velocity of a circular orbit expressed in terms of the radius (or orbital distance) $r$ and period $T$ is
+%
+\begin{equation*}
+    v_r = \frac{2\pi r}{T}.
+\end{equation*}
+%
+For Earth, we have $r = 1 \ \textrm{AU}$ and $T = 1 \ \textrm{yr}$. Earth's orbital velocity is thus always $2\pi$ AU/yr.
+
+In our algorithm we position the Sun in the origin of our coordinate system. This further simplifies our calculations, as the distance between the Sun and Earth is simply defined by the coordinates $(x, y)$ of Earth. To test this simple case, we initialize the position of Earth at $x = 1 \ \textrm{AU}$ and $y = 0$. This means that the initial velocity in the $x$-direction has to be zero, otherwise we would not get a circular orbit. For a counter-clockwise orbit around the Sun, we then need to set the initial velocities to
+%
+\begin{equation*}
+    v_x = 0, \quad v_y = 2\pi.
+\end{equation*}
+%
+The stability of our Euler and velocity Verlet algorithms are then tested using different time steps $\Delta t$. By looking at the kinetic and potential energy of the system, we can also determine how well the two algorithms conserve energy. Total energy and angular momentum should be conserved in this system since gravity is the only force present, and because gravity is a conservative force we should not lose any energy. In theory, the Verlet algorithm should perform better (why?) than the Euler algorithm in this regard.
+
+After this, we will not be using Euler's method due to its lack of precision.
+
+\subsection{Expanding our model: Adding Jupiter to the system}
+
+After object-orienting our code, adding more planets should only be a matter of introducing new objects that represent the physical parameters of the planets. Adding the planet Jupiter will let us study a three-body problem, though we will still keep the Sun motionless. Due to the significant mass of Jupiter ($\approx 300$ times more massive than Earth) we should see some changes in Earth's orbit.
+
+Introducing another planet means adding another term contributing to the total force on Earth. Jupiter will also experience this force, but the effect will be much less significant due the planet's high mass. The magnitude of this force is
+%
+\begin{equation*}
+    F_{\textrm{Earth-Jupiter}} = \frac{GM_{\textrm{Jupiter}} M_{\textrm{Earth}}}{r_{\textrm{Earth-Jupiter}}^2} = \frac{GM_E M_J}{r_{E-J}^2}
+\end{equation*}
+%
+where the masses of Earth and Jupiter are $M_{\textrm{E}} = 6 \times 10^{24}$ kg and $M_{\textrm{J}} = 1.9 \times 10^{27}$ kg. The distance between the two planets $r_{\textrm{E-J}}$ is calculated using the $x$ and $y$ coordinates of the planets,
+%
+\begin{align*}
+    r_{\textrm{E-J}} &= \sqrt{\left(x_E - x_j\right)^2 + \left(y_E - y_J\right)^2 } \\
+    &= \sqrt{(\Delta x_{E-J})^2 + (\Delta y_{E-J})^2}.
+\end{align*}
+%
+Jupiter has an orbital radius of 5.2 AU with respect to the Sun, so that the distance between Earth and Jupiter can vary from 4.2 AU to 6.2 AU. Because $F \propto 1/r^2$, this means that the gravitational forces between the two planets vary by a factor
+%
+\begin{equation*}
+    \frac{1}{(4.2 \ \textrm{AU})^2} \bigg/  \frac{1}{(6.2 \ \textrm{AU})^2} \approx 2.2.
+\end{equation*}
+%
+At a distance of 4.2 AU away from Earth, the forces between the two are as high as possible. Comparing this to the force exerted by the Sun on Earth, we get
+%
+\begin{equation*}
+    \frac{F_{Earth-Sun}}{F_{Earth-Jupiter}} = \frac{G M_E M_{\odot}/r_{E-S}^2}{G M_E M_J/r_{E-J}^2} = \frac{M_{\odot} \ r_{E-J}^2}{M_J \ r_{E-S}^2},
+\end{equation*}
+%
+where the indices representing Earth, Sun and Jupiter are shortened to E, S and J respectively.
+Using that $M_{J} = 9.5 \times 10^{-4} M_\odot$, we get
+%
+\begin{equation*}
+    \frac{F_{Earth-Sun}}{F_{Earth-Jupiter}} = \frac{M_\odot \cdot (4.2 \ \textrm{AU})^2}{9.5 \times 10^{-4} M_\odot \cdot (1 \ \textrm{AU})^2} \approx 18600.
+\end{equation*}
+%
+The gravitational force from Jupiter is around 18600 times weaker than the gravitational force from the Sun, even at the lowest possible Earth-Jupiter distance. This implies that the effects of Jupiter on Earth's orbit should be minimal. However, we will be scaling up the mass of Jupiter in order to examine the stability of our Verlet solver, as a higher Jupiter mass introduces stronger forces. This in turn causes less stability in the system.
+
+\subsection{Final model: Include all planets and Pluto}
+
+Until now we have not considered the gravitational effects from the planets on the Sun. In reality, the Sun will also gain a velocity of its own, though this velocity will be low compared to the planet velocities. For this reason it is best to center our reference system at the center of mass of the Solar System. We define the center of mass to be at the origin, then give the Sun an initial velocity that gives a total momentum of zero for the whole system. This ensures that the center of mass remains at the origin. 
+
+By using these conditions, we find the initial position of the Sun by defining the center of mass $R$ as:
+%
+\begin{equation*}
+    R = \frac{1}{M}(M_S r_S + M_J r_J + M_E r_E),
+\end{equation*}
+%
+where $M$ is the sum of all masses present, $M = M_S + M_J + M_E$.
+We find the initial position of the Sun by setting $R=0$ and solving for $r_S$:
+%
+\begin{equation*}
+    r_S = - \frac{1}{M_S M}\left( M_J r_J + M_E r_E \right) = -0.0049 \ \textrm{AU}.
+\end{equation*}
+%
+This calculation assumes that the Sun, Earth and Jupiter all lie along the x-axis in that order. The initial position of the Sun is thus
+%
+\begin{equation}
+    x_0 = -0.0049 \ \textrm{AU}, \quad y_0 = 0.
+\end{equation}
+%
+The Sun's initial velocity is determined from the condition that the center of mass remains stationary, i. e. the momentum $P$ of the center of mass is zero:
+%
+\begin{equation*}
+    P = M_S v_S + M_J v_J + M_E v_J = 0.
+\end{equation*}
+%
+Solving for $v_S$ this gives (again assuming that the Solar System lies along the x-axis):
+%
+\begin{equation*}
+    v_S = -\frac{1}{M_S}\left( M_E v_E + M_J v_J \right) = -0.0021 \ \textrm{AU/yr},
+\end{equation*}
+%
+so that the initial velocity components are 
+%
+\begin{equation*}
+    v_{x} = 0, \quad v_{y} =  -0.0021 \ \textrm{AU/yr}.
+\end{equation*}
+%
+Our final model of the Solar System will include all planets and the dwarf planet Pluto. By using data from NASA \cite{bib:nasa}, we are able to set the initial conditions of the bodies in the Solar System to their values at the current time.
+
+\subsection{Escape velocity of the Earth}
+
+The escape velocity of an object in a gravitational field is found by setting up the total energy before and after escaping. If the Earth were to have a high enough velocity, the planet would escape the gravitational influence of the Sun. We consider a hypothetical scenario where the gravitational force between the Sun and Earth is defined by
+%
+\begin{equation*}
+    F_G = \frac{G M_\odot M_E}{r^\beta}, \quad \beta \in [2,3].
+\end{equation*}
+%
+For conservative forces, the potential is defined as the integral of the force along a path. This gives us 
+%
+\begin{align*}
+    U & = \int F_G \ dr \\
+    & = \int \frac{G M_\odot M_E}{r^\beta} dr \\
+    & = \frac{1}{1-\beta} \frac{G M_\odot M_E}{r^{\beta-1}}.
+\end{align*}
+%
+The minimum velocity that the Earth needs to escape is found by setting the final velocity (after escaping) to zero. We can also set the potential energy to zero after the planet has escaped, since $r \rightarrow \infty$. The total energy before and after escaping is then 
+%
+\begin{equation*}
+    \frac{1}{2}M_E v^2 + \frac{1}{1-\beta} \frac{G M_\odot M_E}{r^{\beta-1}} = \frac{1}{2}M_E \cdot 0 + 0
+\end{equation*}
+%
+so that 
+%
+\begin{gather*}
+    v^2 = -\frac{2}{1-\beta} \frac{G M_\odot}{r^{\beta-1}} \\
+  \Rightarrow \ v_{escape} = \sqrt{ -\frac{1}{1 - \beta} \frac{8\pi^2}{r^{\beta - 1}} }.
+\end{gather*}
+%
+Since $\beta$ is always greater than 1 we avoid getting complex values. This lets us study the effects on the escape velocity by changing the strength of the gravitational force, as a higher value of $\beta$ corresponds to a weaker force.
+
+\subsection{Perihelion precession of Mercury}
+
+The observed perihelion precession of Mercury is 
 
 \section{Results}
 \label{sec:results}
 
 
-Show the 2D likelihood contours. Summarize constraints on $Q$ and
-$n$. 
-
+\section{Discussion}
+\label{sec:discussion}
 
 \section{Conclusions}
 \label{sec:conclusions}
-
-Summarize results. Discuss their importance, referring to the
-discovery to the initial seeds for structure formation. Mention that
-these results are in good agreement with expectations from
-inflationary theory.
-
-
 
 %\begin{figure}[t]
 %
@@ -82,8 +266,6 @@ inflationary theory.
 %draw conclusions here.}
 %\label{fig:figure_label}
 %\end{figure}
-
-
 
 \begin{deluxetable}{lccc}
 %\tablewidth{0pt}
@@ -97,18 +279,25 @@ Item 1 & Item 2 & Item 3 & Item 4
 \end{deluxetable}
 
 
-
 \begin{acknowledgements}
-  Who do you want to thank for helping out with this project?
+  
 \end{acknowledgements}
 
 \begin{thebibliography}{}
+\bibitem{bib:lectures} Hjorth-Jensen, Morten, 2015, 
+\textit{Computational Physics - Lecture Notes Fall 2015}
 
-\bibitem[G{\'o}rski et al.(1994)]{gorski:1994} G{\'o}rski, K. M.,
-  Hinshaw, G., Banday, A. J., Bennett, C. L., Wright, E. L., Kogut,
-  A., Smoot, G. F., and Lubin, P.\ 1994, ApJL, 430, 89
+\bibitem{bib:nasa} \textit{HORIZONS Web Interface}, retrieved from \url{https://ssd.jpl.nasa.gov/horizons.cgi#top} (22.10.18)
 
+\bibitem{1}
+ Stig-Nicolai Foyn, Christer Dreierstad
+\textit{Project 1} \url{https://github.com/chdre/FYS3150/blob/master/Project1/report/FYS3150-Project1-stignicf-chrisdre.pdf} (01.10.18)
 \end{thebibliography}
 
+%\bibitem[G{\'o}rski et al.(1994)]{gorski:1994} G{\'o}rski, K. M.,
+  %Hinshaw, G., Banday, A. J., Bennett, C. L., Wright, E. L., Kogut,
+  %A., Smoot, G. F., and Lubin, P.\ 1994, ApJL, 430, 89
 
 \end{document}
+
+
