Updates from ShareLaTeX

--- a/Project4/report/ms.tex
+++ b/Project4/report/ms.tex
@@ -10,11 +10,11 @@
 
 \begin{document}
 
-\title{Project 3}
+\title{Project 4}
 
-\author{}
+\author{Christer Dreierstad}
 
-\email{ola.d.nordmann@astro.uio.no}
+\email{chrisdre@student.matnat.uio.no}
 
 \altaffiltext{1}{Institute of Physics, University of
   Oslo, P.O.\ Box 1029 Blindern, N-0315 Oslo, Norway}
@@ -25,14 +25,15 @@
 \begin{abstract}
 
 \end{abstract}
-\keywords{planetary movement --- cosmology: observations --- methods: velocity verlet, forward euler}
+\keywords{computational science: Ising model  --- methods: Metropolis, Monte Carlo}
 
 \section{Introduction}
 \label{sec:introduction}
-
+Studying the phase trans 
 
 \section{Method}
 \label{sec:method}
+
 
 \section{Results}
 \label{sec:results}
@@ -76,7 +77,7 @@
 
 
 \begin{acknowledgements}
-  Who do you want to thank for helping out with this project?
+
 \end{acknowledgements}
 
 \begin{thebibliography}{}
