Updates from ShareLaTeX

--- a/Project4/report/ms.tex
+++ b/Project4/report/ms.tex
@@ -29,7 +29,13 @@
 
 \section{Introduction}
 \label{sec:introduction}
-Studying the phase trans 
+To study the phase transitions in a magnetic system we consider the Ising model for a system of finite lattice size. The energy of the system, by the Ising model, is 
+%
+\begin{gather*}
+    E = -J\sum_{< kl >}^N s_k s_l,
+\end{gather*}
+%
+when there is no external magnetic field applied to the system. For solving this system we consider the Metropolis algorithm, which is a Markov chain Monte Carlo method. 
 
 \section{Method}
 \label{sec:method}
@@ -37,6 +43,78 @@ Studying the phase trans
 
 \section{Results}
 \label{sec:results}
+\begin{figure}[t]
+
+c)
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+\begin{figure}
+\mbox{\epsfig{figure=EofMCC-GS-T1-L20-1e5.pdf,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:E(mcc)T1}
+\end{figure}
+
+MofMCC-GS-T1-L20-1e5.pdf
+
+EofMCC-GS-T2_4-L20-1e5.pdf
+MofMCC-GS-T2_4-L20-1e5.pdf
+
+EofMCC-T1-L20-1e6.pdf
+MofMCC-T1-L20-1e6.pdf
+
+EofMCC-T2_4-L20-1e6.pdf
+MofMCC-T2_4-L20-1e6.pdf
+
+
+
+accepts_of_T-T1T2_4-L20.pdf
+accepts-T1T2_4-L20-1e5.pdf
+CV-T2-23.pdf
+CV-T22-24.pdf
+E-T2-23.pdf
+E-T22-24.pdf
+FittedTc.pdf
+M-T2-23.pdf
+M-T22-24.pdf
+PE-T1-L20-1e6.pdf
+PE-T2_4-L20-1e6.pdf
+X-T2-23.pdf
+X-T22-24.pdf
+
+\begin{figure}
+\mbox{\epsfig{figure=,width=\linewidth,clip=}}
+\caption{text}
+\label{fig:figure_label}
+\end{figure}
+
 
 
 
