--- a/Project4/report/ms.tex
+++ b/Project4/report/ms.tex
@@ -39,14 +39,117 @@ when there is no external magnetic field applied to the system. The coupling con
 
 \section{Method}
 \label{sec:method}
-h
+The two-dimensional binary Ising model has analytical expectation values. The partition function
+%
+\begin{equation*}
+    z = \sum_i \Omega(E_i) e^{\beta E_i},
+\end{equation*}
+%
+where $\Omega(E_i)$ is the degeneracy of energy $E_i$ and $\beta = 1/k_BT$. From Table \ref{tab:energies} we can see that there are 2 energies that are non-zero: $\pm 8J$, which both has a degeneracy of 2. The energy equal to zero has a degeneracy of 12. Expanding the sum of the partition function we get 
+%
+\begin{align*}
+    z &= 2e^{8J\beta} + 12 + 2e^{-8J\beta} \\
+    &= 12 + 2\left(e^{8J\beta} + e^{-8J\beta}\right),
+\end{align*}
+%
+where we have inserted $e^0 = 1$. We know that $\cosh(x) = \frac{1}{2}\left( e^{-x} + e^x\right)$, inserting this gives
+%
+\begin{gather}\label{eq:z}
+    Z = 12 + 4\cosh(8J\beta).
+\end{gather}
+%
+The mean value of the energy is given by
+%
+\begin{align*}
+    \langle E \rangle = -\frac{\partial }{\partial \beta} \ln Z = -\frac{1}{Z}\frac{\partial Z}{\partial \beta},
+\end{align*}
+%
+which is found by inserting the partition function.
+%
+\begin{align*}
+    \langle E \rangle &= -\frac{1}{Z}\frac{\partial}{\partial \beta} \left(12 + 4 \cosh\left(8J\beta\right)\right)\\
+    &= -\frac{4}{Z}\left(8J\sinh\left(8J\beta\right)\right),
+\end{align*}
+pulling a factor 4 from the partition function and inserting we are left with a analytical solution to the mean energy of the lattice
+%
+\begin{gather*}
+    \langle E \rangle = -\frac{8J\sinh\left(8J\beta\right)}{3 + \cosh(8J\beta}.
+\end{gather*}
+%
+The heat capacity can be found by
+%
+\begin{align*}
+    C_V &= \frac{1}{kT^2}\frac{\partial^2}{\partial \beta^2} \ln Z = \frac{1}{kT^2}\frac{\partial}{\partial \beta}\left(\frac{\partial}{\partial \beta} \ln Z\right),
+\end{align*}
+%
+where we recognize the partial derivative in the parenthesis as the negative mean energy. 
+%
+\begin{align*}
+    C_V = \frac{1}{kT^2}&\left(\frac{64J^2\cosh\left(8J\beta\right)\left(3 + \cosh\left(8J\beta\right)\right)}{\left(3 + \cosh\left(8J\beta\right)\right)^2}\right \\
+    &-\left \frac{64J^2\sinh^2\left(8J\beta\right)}{\left(3 + \cosh\left(8J\beta\right)\right)^2}\right),
+\end{align*}
+%
+by inserting for the mean energy and using the product rule. Further simplifications gives the mean heat capacity
+%
+\begin{gather*}
+    C_V = \frac{1}{kT^2}\frac{64\cosh\left(8J\beta\right)}{ 3 + \cosh\left(8J\beta\right)}.
+\end{gather*}
+The susceptibility is given as
+%
+\begin{equation*}
+    \chi = \frac{1}{kT}\left(\langle M^2 \rangle - \langle M \rangle^2\right).
+\end{equation*}
+%
+To find the susceptibility of the system we consider the mean magnetic moment
+%
+\begin{equation*}
+    \langle M \rangle = \frac{1}{Z} \sum_i |M_i| e^{-\beta E_i},
+\end{equation*}
+where we find the magnetic moment for a given energy in Table \ref{tab:energies}. So the mean magnetic moment is
+%
+\begin{equation*}
+    \langle M \rangle = \frac{1}{Z}\left(4e^{8J\beta} + 4\left(2e^{0}\right) + 4\left(-2e^0\right) + -4e^{8J\beta} \right) = 0.
+\end{equation*}
+%
+Further we calculate the mean of the  magnetic moment squared
+%
+\begin{equation*}
+    \langle M^2 \rangle = \frac{1}{Z}\sum_i M_i^2 e^{-\beta E_i},
+\end{equation*}
+and again referring to Table \ref{tab:energies} we get
+%
+\begin{align*}
+    \langle M^2 \rangle &= \frac{1}{Z}\left(16\left(2e^{8J\beta}\right) + 16\left(2e^0\right) \right) \\
+    &= \frac{8\left(e^{8J\beta} + 1\right)}{3 + \cosh\left(8J\beta\right)}.
+\end{align*}
+So the susceptibility of the system is given as
+%
+\begin{equation*}
+    \chi = \frac{1}{kT^2}\langle M^2 \rangle = \frac{1}{kT^2}\frac{8\left(e^{8J\beta} + 1\right)}{3 + \cosh\left(8J\beta\right)}
+\end{equation*}
+%
+Further we find the mean of the absolute value of the magnetic moment by
 
-The two-dimensional binary Ising model has analytical expectation values. 
+\begin{align*}
+    \langle |M| \rangle &= \frac{1}{Z} \sum_i |M_i| e^{-\beta E_i} \\
+     &= \frac{1}{Z}\left(4e^{8J\beta} + 4\left(2e^{0}\right) + 4\left(|-2|e^0\right) + |-4|e^{8J\beta} \right) \\
+     &= \frac{2e^{8J\beta} + 4}{3 + \cosh\left(8J\beta\right)},
+\end{align*}
+%
+after pulling out a factor 4 from the partition function. To summarize we have the following analytical expression for the system
+%
+\begin{align*}
+    \langle E \rangle &= -\frac{4}{Z}\left(8J\sinh\left(8J\beta\right)\right), \\
+    \langle |M| \rangle &= \frac{2e^{8J\beta} + 4}{3 + \cosh\left(8J\beta\right)}, \\
+    C_V &= \frac{1}{kT^2}\frac{64\cosh\left(8J\beta\right)}{ 3 + \cosh\left(8J\beta\right)}, \\
+    \chi &= \frac{1}{kT^2}\frac{8\left(e^{8J\beta} + 1\right)}{3 + \cosh\left(8J\beta\right)}.
+\end{align*}
+
 
 \begin{deluxetable}{cccc}
 \tablewidth{0pt}
-\tablecaption{\label{tab:results}}
-\tablecomments{....}
+\tablecaption{\label{tab:energies}}
+\tablecomments{...}
 \tablecolumns{4}
 \tablehead{Spins up  & Degeneracy & Energy & Magnetic moment}
 \startdata
