Updates from ShareLaTeX

--- a/Project4/report/ms.tex
+++ b/Project4/report/ms.tex
@@ -361,15 +361,14 @@ PBC
 
 \begin{figure}[t]
 \mbox{\epsfig{figure=accepts_of_T-T1T2_4-L20.pdf,width=\linewidth,clip=}}
-\caption{Logarithm of the accepted states as a function of the temperature for different }
-\label{fig:logAccepts}
+\caption{Logarithm of the accepted states as a function of the temperature for different number of Monte Carlo cycles. The left four dots corresponds to $T=1$ kT/J, and the right four dots corresponds to $T=2.4$ kT/J. The initial spins are randomly organized.}
+\label{fig:logAccepts(t)}
 \end{figure}
 
 \begin{figure}[t]
 \mbox{\epsfig{figure=accepts-T1T2_4-L20-1e5.pdf,width=\linewidth,clip=}}
-\caption{Description of figure -- explain all elements, but do not
-draw conclusions here.}
-\label{fig:figure_label}
+\caption{Logarithmic plot of accepted states as a function of }
+\label{fig:logAccepts}
 \end{figure}
 
 \begin{figure}[t]
